# inventory-system

./: Cargo.toml  diesel.toml
migrations/: 0001_init.sql  0002_add_role.sql
migrations/2024-10-07-143709_users/: up.sql
src/: lib.rs  main.rs
src/domains/: mod.rs
src/domains/home/: controllers.rs  mod.rs  services.rs
src/domains/product/: controllers.rs  dtos.rs  mod.rs  services.rs
src/domains/product_variant/: controllers.rs  dtos.rs  mod.rs  services.rs
src/domains/user/: controllers.rs  dtos.rs  mod.rs  services.rs
src/errors/: mod.rs
src/states/: mod.rs
src/structs/: base_response.rs  mod.rs  models.rs  user.rs
src/structs/models/: order.rs  order_item.rs  product.rs  product_variant.rs  product_variant_item.rs  refresh_token.rs  user.rs
