[package]
name = "inventory-system"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "4"
chrono = "0.4.38"
diesel = "2.2.4"
diesel-async = "0.5.0"
serde = "1.0.210"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres"]} 
tokio = "1.40.0"

