[package]
name = "inventory-system"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "4"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] } 
derive_more = { version = "1.0.0", features = ["error", "display"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = "1.0.210"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sqlx = { features = ["uuid", "chrono"], version = "^0.8.2" } 
tokio = "1.40.0"

